--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="loading-process">
 <div class="loading">
 	<div class="loading-circle"></div>
-	<div class="loading-avatar"><img src="images/avatar@2x.jpg" alt="" width="100" height="100"></div>
+	<div class="loading-avatar"><img src="images/123.jpg" alt="" width="100" height="100"></div>
 	<div class="loading-info">正在努力加载中...</div>
 </div>
 <div class="section-header">
@@ -48,9 +48,9 @@
 				<h1>关于佩奇</h1>
 				<p class="fade fade1">2008 年接触网站建设</p>
 				<p class="fade fade2">2012 年专注前端学习</p>
-				<p class="fade fade3">断续写过两年多独立博客（旧博 <a href="http://www.qianxingzhem.com" target="_blank">潜行者m</a>)</p>
-				<p class="fade fade4"><a href="http://www.haohaoxuexitiantianxiangshang.com" target="_blank">好好学习天天向上</a> 开发者</p>
-				<p class="fade fade5"><a href="http://deepdevelop.com" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
+				<p class="fade fade3">断续写过两年多独立博客（旧博 <a href="#" target="_blank">潜行者m</a>)</p>
+				<p class="fade fade4"><a href="#" target="_blank">好好学习天天向上</a> 开发者</p>
+				<p class="fade fade5"><a href="#" target="_blank">Deepdevelop</a> 兼职前端工程师</p>
 				<p class="fade fade6">目前在申请前端实习，为 10 月份校招做准备。</p>
 			</div>
 			<div class="right">
@@ -65,7 +65,7 @@
 			<h1>近期作品</h1>
 			<div class="works-list clearfix">
 				<div class="works-item first fade fade1">
-					<a href="http://www.uucsr.org/" target="_blank">
+					<a href="#" target="_blank">
 						<img src="images/works/uucsr.jpg" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>UUSCR</h2>
@@ -75,7 +75,7 @@
 					</a>
 				</div>
 				<div class="works-item fade fade2">
-					<a href="http://hamburger-kammerspiele.de/" target="_blank">
+					<a href="#" target="_blank">
 						<img src="images/works/hk.jpg" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>Hamburger Kammerspiele</h2>
@@ -85,7 +85,7 @@
 					</a>
 				</div>
 				<div class="works-item fade fade3">
-					<a href="http://www.haohaoxuexitiantianxiangshang.com/" target="_blank">
+					<a href="#" target="_blank">
 						<img src="images/works/hhxx.jpg" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>好好学习 天天向上</h2>
@@ -95,7 +95,7 @@
 					</a>
 				</div>
 				<div class="works-item first fade fade4">
-					<a href="http://97866.com/" target="_blank">
+					<a href="#" target="_blank">
 						<img src="images/works/game.jpg" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>游戏小站</h2>
@@ -105,7 +105,7 @@
 					</a>
 				</div>
 			</div>
-			<a class="more-link" href="http://yujiangshui.com/product/">查看更多</a>
+			<a class="more-link" href="#">查看更多</a>
 		</div>
 	</div>
 </div>
@@ -137,11 +137,11 @@
 				<div class="contact-ways fade fade1">
 					<h2>社交网络</h2>
 					<ul>
-						<li>邮箱：<a target="_blank" href="mailto:hi@harryyu.me">hi@harryyu.me</a></li>
-						<li>知乎：<a target="_blank" href="http://www.zhihu.com/people/jiangshui">@于江水</a></li>
-						<li>微博：<a target="_blank" href="http://weibo.com/yujiangshui">@yujiangshui</a></li>
-						<li>Twitter：<a target="_blank" href="https://twitter.com/yujiangshui">@yujiangshui</a></li>
-						<li>Github：<a target="_blank" href="https://github.com/yujiangshui">@yujiangshui</a></li>
+						<li>邮箱：<a target="_blank" href="mailto:quit1660595@163.com">佩奇</a></li>
+						<li>知乎：<a target="_blank" href="#">@佩奇</a></li>
+						<li>微博：<a target="_blank" href="#">@佩奇</a></li>
+						<li>Twitter：<a target="_blank" href="#">@佩奇</a></li>
+						<li>Github：<a target="_blank" href="#">@佩奇佩奇佩奇</a></li>
 					</ul>
 				</div>
 				<div class="contact-info fade fade2">
@@ -155,7 +155,7 @@
 				<ul>
 					<li>根据设计稿做出后端开发人员需要的前端页面，并与后端人员做交流。</li>
 					<li>根据需求，对网站前端进行修改和优化，或者转响应式处理。</li>
-					<li>做 WordPress 主题或者功能，功能等主要由 <a href="http://wpjam.com/" target="_blank">WPJAM</a> 来做，我来前端有关。</li>
+					<li>做 WordPress 主题或者功能，功能等主要由 <a href="#" target="_blank">WPJAM</a> 来做，我来前端有关。</li>
 					<li>对于网站建设项目，我也有一些同行朋友可以推荐，也欢迎咨询！</li>
 				</ul>
 				<p><strong>合作流程</strong>：按照合作谈定的价格，预付 50% 的项目款，开始工作。完成验收后，支付尾款。</p>
